--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,11 +5,18 @@ spring:
   main:
     debug: true
 
+  datasource:
+    url: ${DB_URL}
+    username: ${DB_NAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  # 로컬디비 - 태태
   #datasource:
-   # url: ${DB_URL}
-    #username: ${DB_NAME}
-    #password: ${DB_PASSWORD}
-    # driver-class-name: com.mysql.cj.jdbc.Driver
+   # url: jdbc:mysql://localhost:3306/bigbrother?serverTimezone=UTC
+   # driver-class-name: com.mysql.cj.jdbc.Driver
+   # username: root
+   # password: 1234
 
   jpa:
     hibernate:
@@ -23,9 +30,3 @@ spring:
 jwt:
   secret: ${JWT_SECRET}
 
-  # 로컬디비 - 태태
-  datasource:
-    url: jdbc:mysql://localhost:3306/bigbrother?serverTimezone=UTC
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: 1234
