--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,5 +25,5 @@ spring:
 
 
 jwt:
-  secret: ${JWT_SECRET}
-
+#  secret: ${JWT_SECRET}
+  secret: "dGVzdHNlY3JldGtleXdpdGhtb3JldGhhbm1vcmV0aGFuMzJieXRlc2xvbmc="
