notice(공지사항) 완료 (등록/수정)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,5 +25,4 @@ spring:
 
 
 jwt:
-#  secret: ${JWT_SECRET}
-  secret: "dGVzdHNlY3JldGtleXdpdGhtb3JldGhhbm1vcmV0aGFuMzJieXRlc2xvbmc="
+  secret: ${JWT_SECRET}
