--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     //
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    // 이메일
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.0.5'
+
 //    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
