--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,19 +17,19 @@ spring:
 #      max-lifetime: 177000  # 177초, hikari는 RDS wait_timeout(180초) 보다 2 ~ 3초 정도 짧게 줄 것을 권장
 #    driver-class-name: com.mysql.cj.jdbc.Driver
 
-#  # 김동연 로컬 데이터베이스 설정
-  datasource:
-    username: root
-    password: 1234
-    url: jdbc:mysql://localhost:3306/bigbrother
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
-  # 태태 로컬 데이터베이스 설정
+# 김동연 로컬 데이터베이스 설정
 #  datasource:
-#    url: jdbc:mysql://localhost:3306/bigbrother?serverTimezone=UTC
-#    driver-class-name: com.mysql.cj.jdbc.Driver
 #    username: root
 #    password: 1234
+#    url: jdbc:mysql://localhost:3306/bigbrother
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  # 태태 로컬 데이터베이스 설정
+  datasource:
+    url: jdbc:mysql://localhost:3306/bigbrother?serverTimezone=UTC
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: 1234
 
   mail:
     host: smtp.gmail.com
