--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,11 +18,11 @@ spring:
 #    driver-class-name: com.mysql.cj.jdbc.Driver
 
 # 김동연 로컬 데이터베이스 설정
-  datasource:
-    username: root
-    password: 1234
-    url: jdbc:mysql://localhost:3306/bigbrother
-    driver-class-name: com.mysql.cj.jdbc.Driver
+#  datasource:
+#    username: root
+#    password: 1234
+#    url: jdbc:mysql://localhost:3306/bigbrother
+#    driver-class-name: com.mysql.cj.jdbc.Driver
 
   # 태태 로컬 데이터베이스 설정
 #  datasource:
