--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,11 +25,11 @@ spring:
 #    driver-class-name: com.mysql.cj.jdbc.Driver
 
   # 태태 로컬 데이터베이스 설정
-#  datasource:
-#    url: jdbc:mysql://localhost:3306/bigbrother?serverTimezone=UTC
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    username: root
-#    password: 1234
+  datasource:
+    url: jdbc:mysql://localhost:3306/bigbrother
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: 1234
 
   mail:
     host: smtp.gmail.com
