--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,16 +8,32 @@ spring:
   jackson:
     time-zone: Asia/Seoul
 
-  # 환경 변수를 사용하는 데이터베이스 설정 (주석 해제 필요시)
+#  # 환경 변수를 사용하는 데이터베이스 설정 (주석 해제 필요시)
+  datasource:
+    url: ${DB_URL}
+    username: ${DB_USER_NAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      max-lifetime: 177000  # 177초, hikari는 RDS wait_timeout(180초) 보다 2 ~ 3초 정도 짧게 줄 것을 권장
+#
 #  datasource:
-#    url: ${DB_URL}
-#    username: ${DB_NAME}
-#    password: ${DB_PASSWORD}
-#    hikari:
-#      max-lifetime: 177000  # 177초, hikari는 RDS wait_timeout(180초) 보다 2 ~ 3초 정도 짧게 줄 것을 권장
+#    url: jdbc:mysql://localhost:3306/big_brother?serverTimezone=UTC
 #    driver-class-name: com.mysql.cj.jdbc.Driver
+#    username: root
+#    password: 1234
+#    hikari:
+#      max-lifetime: 177000
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
+#        dialect: org.hibernate.dialect.MySQL8Dialect
 
-# 김동연 로컬 데이터베이스 설정
+  # 김동연 로컬 데이터베이스 설정
 #  datasource:
 #    username: root
 #    password: 1234
@@ -25,18 +41,14 @@ spring:
 #    driver-class-name: com.mysql.cj.jdbc.Driver
 
   # 태태 로컬 데이터베이스 설정
-  datasource:
-    url: jdbc:mysql://localhost:3306/bigbrother
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: 1234
-
-#   상윤 로컬 데이터베이스 설정
 #  datasource:
-#    url: jdbc:mysql://localhost:3306/big_brother?serverTimezone=UTC
+#    url: jdbc:mysql://localhost:3306/bigbrother
 #    driver-class-name: com.mysql.cj.jdbc.Driver
 #    username: root
 #    password: 1234
+
+#   상윤 로컬 데이터베이스 설정
+
 
   mail:
     host: smtp.gmail.com
@@ -56,13 +68,6 @@ spring:
 
       auth-code-expiration-millis: 1800000  # 30 * 60 * 1000 == 30분
 
-  jpa:
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        format_sql: true
-        show_sql: true
 
   data:
     redis:
@@ -90,3 +95,10 @@ cloud:
       static: ap-northeast-2
     stack:
       auto: false
+
+ssh:
+  remote-host: ${SSH_REMOTE_HOST}
+  ssh-port: 22
+  user-name: ${SSH_USER_NAME}
+  private-key-path: ${SSH_PRIVATE_KEY_PATH}
+
