--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,9 @@ dependencies {
 
     // Pageable
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+
+    // google ocr
+    implementation 'com.google.cloud:google-cloud-vision:3.34.0'
 }
 
 tasks.named('test') {
