--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,11 @@ dependencies {
 
     // Pageable
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+
+    // lamda
+    implementation 'com.amazonaws:aws-java-sdk-lambda:1.12.50'
+    implementation 'com.amazonaws:aws-java-sdk-core:1.12.50'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
 }
 
 tasks.named('test') {
