--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ repositories {
 
 dependencies {
 
+    // JSch ssh 터널링
+    implementation 'com.github.mwiede:jsch:0.2.16'
+
     // DB
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
@@ -65,6 +68,9 @@ dependencies {
 
     // Pageable
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+
+
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
