--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,21 +8,21 @@ spring:
   jackson:
     time-zone: Asia/Seoul
 
-  # 환경 변수를 사용하는 데이터베이스 설정 (주석 해제 필요시)
-#  datasource:
-#    url: ${DB_URL}
-#    username: ${DB_NAME}
-#    password: ${DB_PASSWORD}
-#    hikari:
-#      max-lifetime: 177000  # 177초, hikari는 RDS wait_timeout(180초) 보다 2 ~ 3초 정도 짧게 줄 것을 권장
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-
-# 김동연 로컬 데이터베이스 설정
+#  # 환경 변수를 사용하는 데이터베이스 설정 (주석 해제 필요시)
   datasource:
-    username: root
-    password: 1234
-    url: jdbc:mysql://localhost:3306/bigbrother
+    url: ${DB_URL}
+    username: ${DB_USER_NAME}
+    password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      max-lifetime: 177000  # 177초, hikari는 RDS wait_timeout(180초) 보다 2 ~ 3초 정도 짧게 줄 것을 권장
+#
+# 김동연 로컬 데이터베이스 설정
+#  datasource:
+#    username: root
+#    password: 1234
+#    url: jdbc:mysql://localhost:3306/bigbrother
+#    driver-class-name: com.mysql.cj.jdbc.Driver
 
   # 태태 로컬 데이터베이스 설정
 #  datasource:
@@ -33,7 +33,7 @@ spring:
 
 #   상윤 로컬 데이터베이스 설정
 #  datasource:
-#    url: jdbc:mysql://localhost:3306/big_brother?serverTimezone=UTC
+#    url: jdbc:mysql://localhost:3306/bigbrother
 #    driver-class-name: com.mysql.cj.jdbc.Driver
 #    username: root
 #    password: 1234
@@ -90,3 +90,10 @@ cloud:
       static: ap-northeast-2
     stack:
       auto: false
+
+ssh:
+  remote-host: ${SSH_REMOTE_HOST}
+  ssh-port: 22
+  user-name: ${SSH_USER_NAME}
+  private-key-path: ${SSH_PRIVATE_KEY_PATH}
+
