--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ repositories {
 
 dependencies {
 
+    // JSch ssh 터널링
+    implementation 'com.github.mwiede:jsch:0.2.16'
+
     // DB
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
@@ -70,6 +73,9 @@ dependencies {
     implementation 'com.amazonaws:aws-java-sdk-lambda:1.12.50'
     implementation 'com.amazonaws:aws-java-sdk-core:1.12.50'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
+
+
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
