--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,7 +32,7 @@ jobs:
       with:
         arguments: clean bootJar
   
-    # 3. Docker 이미지 빌드
+    # 3. Docker 이미지 빌드.
     - name: docker image build
       run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/big-brother-demo .
 
