--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,7 +34,7 @@ jobs:
   
     # 3. Docker 이미지 빌드.
     - name: docker image build
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/github-actions-demo:latest .
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/big-brother-demo:latest .
 
    # 4. DockerHub 로그인
     - name: docker login
@@ -55,7 +55,7 @@ jobs:
     steps:
       # 1. 최신 이미지를 풀받는다.,
       - name: docker pull
-        run: sudo docker pull ${{secrets.DOCERHUB_USERNAME}}/big-brother-demo
+        run: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/big-brother-demo
 
       # 2. 기존의 컨테이너를 중지시킵니다.
       - name: docker stop container
