--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,7 +34,10 @@ jobs:
   
     # 3. Docker 이미지 빌드.
     - name: docker image build
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/big-brother-demo:latest .
+      env:
+        DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      run: |
+        docker build -t ${DOCKER_USERNAME}/big-brother-demo:latest .
 
    # 4. DockerHub 로그인
     - name: docker login
