--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,20 +31,19 @@ jobs:
       uses: gradle/gradle-build-action@v2
       with:
         arguments: clean bootJar
-  
-    # 3. Docker 이미지 빌드.
-    - name: docker image build
-      env:
-        DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      run: |
-        docker build -t "$DOCKER_USERNAME"/big-brother-demo:latest .
 
-   # 4. DockerHub 로그인
+      # 4. DockerHub 로그인
     - name: docker login
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+    # 3. Docker 이미지 빌드.
+    - name: docker image build
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/big-brother-demo:latest .
+
+
 
   # 5. Docker Hub 이미지 푸시
     - name: docker Hub push
