--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,7 +9,7 @@ name: Java CI with Gradle
 
 on:
   pull_request:
-    branches: [ "main" ]
+    branches: [ "ci-cd" ]
 permissions:
   contents: read
   
@@ -32,18 +32,16 @@ jobs:
       with:
         arguments: clean bootJar
 
-      # 4. DockerHub 로그인
+    # 3. Docker 이미지 빌드.
+    - name: docker image build
+      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/big-brother-demo:latest .
+
+   # 4. DockerHub 로그인
     - name: docker login
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-    # 3. Docker 이미지 빌드.
-    - name: docker image build
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/big-brother-demo:latest .
-
-
 
   # 5. Docker Hub 이미지 푸시
     - name: docker Hub push
