--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,12 +9,14 @@ name: Java CI with Gradle
 
 on:
   pull_request:
-    branches: [ "ci-cd" ]
+    types: [ closed ]
+    branches: [ main ]
 permissions:
   contents: read
   
 jobs:
   build-docker-image:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
