--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,7 +38,7 @@ jobs:
     - name: docker image build
       run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/big-brother-demo:latest .
 
-   # 4. DockerHub 로그인
+   # 4. DockerHub 로그인.
     - name: docker login
       uses: docker/login-action@v2
       with:
