--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -63,7 +63,7 @@ jobs:
         run: sudo docker stop $(sudo docker ps -q) 2>/dev/null || true
       # 3. 최신 이미지를 컨테이너화하여 실행시킨다.
       - name: docker run new container
-        run: sudo docker run --name github-actions-demo --rm -d -p 8080:8080 --env-file /home/ubuntu/env1.list/env1.list ${{ secrets.DOCKERHUB_USERNAME }}/big-brother-demo
+        run: sudo docker run --name github-actions-demo --rm -d -p 8080:8080 --env-file /home/ubuntu/env1.list ${{ secrets.DOCKERHUB_USERNAME }}/big-brother-demo
 
       # 4. 미사용 이미지를 정리합니다.
       - name: delete old docker image
