--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,7 +33,7 @@ spring:
 
 #   상윤 로컬 데이터베이스 설정
 #  datasource:
-#    url: jdbc:mysql://localhost:3306/bigbrother
+#    url: jdbc:mysql://localhost:3306/big_brother
 #    driver-class-name: com.mysql.cj.jdbc.Driver
 #    username: root
 #    password: 1234
@@ -58,7 +58,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         format_sql: true
