[feat] : ocr로 transactions create

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -90,3 +90,9 @@ cloud:
       static: ap-northeast-2
     stack:
       auto: false
+
+google:
+  cloud:
+    vision:
+      credentials:
+        file: ${GOOGLE_APPLICATION_CREDENTIALS}
