--- a/build.gradle
+++ b/build.gradle
@@ -69,10 +69,12 @@ dependencies {
     // lamda
     implementation 'com.amazonaws:aws-java-sdk-lambda:1.12.50'
     implementation 'com.amazonaws:aws-java-sdk-core:1.12.50'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
+//    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.0'
 
-    // google ocr
-    implementation 'com.google.cloud:google-cloud-vision:3.34.0'
+    // OCR
+    implementation 'org.apache.pdfbox:pdfbox:2.0.27'
+    implementation 'net.sourceforge.tess4j:tess4j:4.5.5'
 }
 
 tasks.named('test') {
