--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     // 이메일
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
@@ -69,13 +70,11 @@ dependencies {
     // Pageable
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 
-    // lamda
+    // Lambda
     implementation 'com.amazonaws:aws-java-sdk-lambda:1.12.50'
     implementation 'com.amazonaws:aws-java-sdk-core:1.12.50'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
 
-
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     // OCR
     implementation 'org.apache.pdfbox:pdfbox:2.0.27'
