--- a/build.gradle
+++ b/build.gradle
@@ -75,10 +75,13 @@ dependencies {
     implementation 'com.amazonaws:aws-java-sdk-core:1.12.50'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
 
-
     // OCR
     implementation 'org.apache.pdfbox:pdfbox:2.0.27'
     implementation 'net.sourceforge.tess4j:tess4j:4.5.5'
+
+    // jackson
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 }
 
 tasks.named('test') {
