--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,7 +9,14 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ ci-cd ]
+    branches:
+      - ci-cd
+      - main
+  pull_request:
+    branches:
+      - ci-cd
+      - main
+
 permissions:
   contents: read
   
