--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
 on:
@@ -19,59 +12,59 @@ on:
 
 permissions:
   contents: read
-  
+
 jobs:
   build-docker-image:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted  # 기존의 self-hosted 러너를 사용
     steps:
-    - uses: actions/checkout@v3
-    # 1. Java 17 세팅
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      - uses: actions/checkout@v3
+      # 1. Java 17 세팅
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-    # 2. Spring Boot 애플리케이션 빌드
-    
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@v2
-      with:
-        arguments: clean bootJar
+      # 2. Spring Boot 애플리케이션 빌드
 
-    # 3. Docker 이미지 빌드.
-    - name: docker image build
-      run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/big-brother-demo:latest .
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: clean bootJar
 
-   # 4. DockerHub 로그인.
-    - name: docker login
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      # 3. Docker 이미지 빌드.
+      - name: docker image build
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/big-brother-demo:latest .
 
-  # 5. Docker Hub 이미지 푸시
-    - name: docker Hub push
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/big-brother-demo
+      # 4. DockerHub 로그인.
+      - name: docker login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-  ## 푸시한 임지를 ec2에서 풀받아서 실행시키는 과정
+      # 5. Docker Hub 이미지 푸시
+      - name: docker Hub push
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/big-brother-demo
+
+  ## 푸시한 이미지를 EC2에서 가져와 실행하는 과정
   run-docker-image-on-ec2:
     needs: build-docker-image
-    runs-on: self-hosted
-
+    runs-on: self-hosted  # 동일한 self-hosted 러너에서 실행
     steps:
-      # 1. 최신 이미지를 풀받는다.,
+      # 1. 최신 이미지를 가져온다.
       - name: docker pull
         run: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/big-brother-demo
 
-      # 2. 기존의 컨테이너를 중지시킵니다.
+      # 2. 기존의 컨테이너를 중지시킨다.
       - name: docker stop container
-        # 모든 컨테이너를 중지시킴.
+        # 모든 컨테이너를 중지
         run: sudo docker stop $(sudo docker ps -q) 2>/dev/null || true
-      # 3. 최신 이미지를 컨테이너화하여 실행시킨다..
+
+      # 3. 최신 이미지를 컨테이너화하여 실행시킨다.
       - name: docker run new container
         run: sudo docker run --name github-actions-demo --rm -d -p 8080:8080 --env-file /home/ubuntu/env1.list ${{ secrets.DOCKERHUB_USERNAME }}/big-brother-demo
 
-      # 4. 미사용 이미지를 정리합니다.
+      # 4. 미사용 이미지를 정리한다.
       - name: delete old docker image
         run: sudo docker system prune -f
