--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
   # 환경 변수를 사용하는 데이터베이스 설정 (주석 해제 필요시)
   datasource:
     url: ${DB_URL}
-    username: ${DB_NAME}
+    username: ${DB_USER_NAME}
     password: ${DB_PASSWORD}
     hikari:
       max-lifetime: 177000  # 177초, hikari는 RDS wait_timeout(180초) 보다 2 ~ 3초 정도 짧게 줄 것을 권장
