--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -8,13 +8,9 @@
 name: Java CI with Gradle
 
 on:
-  push:
-    branches:
-      - ci-cd
-      - main
   pull_request:
+    types: [closed]
     branches:
-      - ci-cd
       - main
 
 permissions:
