--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,20 +12,20 @@ spring:
     time-zone: Asia/Seoul
 
   # 환경 변수를 사용하는 데이터베이스 설정 (주석 해제 필요시)
-  datasource:
-    url: ${DB_URL}
-    username: ${DB_USER_NAME}
-    password: ${DB_PASSWORD}
-    hikari:
-      max-lifetime: 177000  # 177초, hikari는 RDS wait_timeout(180초) 보다 2 ~ 3초 정도 짧게 줄 것을 권장
-    driver-class-name: com.mysql.cj.jdbc.Driver
+ # datasource:
+ #   url: ${DB_URL}
+ #   username: ${DB_NAME}
+ #   password: ${DB_PASSWORD}
+ #   hikari:
+ #     max-lifetime: 177000  # 177초, hikari는 RDS wait_timeout(180초) 보다 2 ~ 3초 정도 짧게 줄 것을 권장
+ #   driver-class-name: com.mysql.cj.jdbc.Driver
 
 # 김동연 로컬 데이터베이스 설정
-#  datasource:
-#    username: root
-#    password: 1234
-#    url: jdbc:mysql://localhost:3306/bigbrother
-#    driver-class-name: com.mysql.cj.jdbc.Driver
+  datasource:
+    username: root
+    password: 1234
+    url: jdbc:mysql://localhost:3306/bigbrother
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   # 태태 로컬 데이터베이스 설정
 #  datasource:
@@ -100,10 +100,3 @@ ssh:
   user-name: ${SSH_USER_NAME}
   private-key-path: ${SSH_PRIVATE_KEY_PATH}
 
-
-
-google:
-  cloud:
-    vision:
-      credentials:
-        file: ${GOOGLE_APPLICATION_CREDENTIALS}
