--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,21 +11,21 @@ spring:
       write-dates-as-timestamps: false
     time-zone: Asia/Seoul
 
+  # 환경 변수를 사용하는 데이터베이스 설정 (주석 해제 필요시)
+#  datasource:
+#    url: ${DB_URL}
+#    username: ${DB_USER_NAME}
+#    password: ${DB_PASSWORD}
+#    hikari:
+#      max-lifetime: 177000  # 177초, hikari는 RDS wait_timeout(180초) 보다 2 ~ 3초 정도 짧게 줄 것을 권장
+#    driver-class-name: com.mysql.cj.jdbc.Driver
 
-  datasource:
-    url: ${DB_URL}
-    username: ${DB_USER_NAME}
-    password: ${DB_PASSWORD}
-    hikari:
-      max-lifetime: 177000  # 177초, hikari는 RDS wait_timeout(180초) 보다 2 ~ 3초 정도 짧게 줄 것을 권장
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  # 환경 변수를 사용하는 데이터베이스 설정 (주석 해제 필요시)  # datasource:
   # 태태 로컬 데이터베이스 설정
-  #  datasource:
-  #    url: jdbc:mysql://localhost:3306/bigbrother
-  #    driver-class-name: com.mysql.cj.jdbc.Driver
-  #    username: root
-  #    password: 1234
+  datasource:
+    url: jdbc:mysql://localhost:3306/bigbrother
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: 1234
 
   #   상윤 로컬 데이터베이스 설정
 #  datasource:
@@ -54,7 +54,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
@@ -70,7 +70,6 @@ spring:
       enabled: true
       max-request-size: 300MB
       max-file-size: 300MB
-
 
 jwt:
   secret: ${JWT_SECRET}
@@ -92,4 +91,3 @@ ssh:
   ssh-port: 22
   user-name: ${SSH_USER_NAME}
   private-key-path: ${SSH_PRIVATE_KEY_PATH}
-
