--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,13 +11,20 @@ spring:
       write-dates-as-timestamps: false
     time-zone: Asia/Seoul
 
+#  datasource:
+#    url: ${DB_URL}
+#    username: ${DB_USER_NAME}
+#    password: ${DB_PASSWORD}
+#    hikari:
+#      max-lifetime: 177000  # 177초, hikari는 RDS wait_timeout(180초)보다 2 ~ 3초 정도 짧게 줄 것을 권장
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  # 태태 로컬 데이터베이스 설정
   datasource:
-    url: ${DB_URL}
-    username: ${DB_USER_NAME}
-    password: ${DB_PASSWORD}
-    hikari:
-      max-lifetime: 177000  # 177초, hikari는 RDS wait_timeout(180초)보다 2 ~ 3초 정도 짧게 줄 것을 권장
+    url: jdbc:mysql://localhost:3306/bigbrother
     driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: 1234
 
   mail:
     host: smtp.gmail.com
@@ -36,7 +43,7 @@ spring:
           writetimeout: 5000
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
