--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -13,7 +13,7 @@ spring:
   #    password: 1234
     jpa:
       hibernate:
-        ddl-auto: update
+        ddl-auto: create-drop
       properties:
         hibernate:
           format_sql: true
