--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,16 +1,17 @@
 spring:
-    datasource:
-      url: ${DB_URL}
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      username: ${DB_USER_NAME}
-      password: ${DB_PASSWORD}
-  # 환경 변수를 사용하는 데이터베이스 설정 (주석 해제 필요시)  # datasource:
+#    datasource:
+#      url: ${DB_URL}
+#      driver-class-name: com.mysql.cj.jdbc.Driver
+#      username: ${DB_USER_NAME}
+#      password: ${DB_PASSWORD}
+
   # 태태 로컬 데이터베이스 설정
-  #  datasource:
-  #    url: jdbc:mysql://localhost:3306/bigbrother
-  #    driver-class-name: com.mysql.cj.jdbc.Driver
-  #    username: root
-  #    password: 1234
+    datasource:
+      url: jdbc:mysql://localhost:3306/bigbrother
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      username: root
+      password: 1234
+
     jpa:
       hibernate:
         ddl-auto: update
